--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "~0.3.35",
-    "wagmi": "~1.0.5"
+    "wagmi": "~1.0.5",
+    "web3": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.16.12",
